Don't wrap column headers; fixes #43

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -4,6 +4,9 @@
 @import headings
 @import bootstrap
 
+th
+  white-space: nowrap
+
 .alert-danger, .alert-success
   @extend .alert
 
